<?xml version="1.0" encoding="utf-8"?>
<resources>

    <!-- General -->
    
    <!-- Title -->
    <string name="title_name">Name:</string>
    <string name="title_category">Category:</string>
    <string name="title_start_time">Start Time:</string>
    <string name="title_complete_time">Complete Time:</string>
    <string name="title_difficulty_level">Difficulty Level:</string>
    <string name="title_point">Point:</string>
    <string name="title_status">Status:</string>
    <string name="title_username">Username:</string>
    <string name="title_password">Password:</string>
    <string name="title_share_facebook">Share from Real Life Real Game</string>
    
    <!-- Hint -->
    <string name="hint_name">Name</string>
    <string name="hint_category">Category</string>
    <string name="hint_start_time">Start Time</string>
    <string name="hint_complete_time">Complete Time</string>
    <string name="hint_difficulty_level">Difficulty Level</string>
    <string name="hint_point">Point</string>
    <string name="hint_status">Status</string>
    <string name="hint_username">Username</string>
    <string name="hint_password">Password</string>
    <string name="hint_remember_password">Remember password</string>
    
    <!-- Action -->
    <string name="action_login">Login</string>
    <string name="action_create_task">Create task</string>
    <string name="action_mark_as_complete">Completed</string>
    <string name="action_mark_as_uncomplete">Uncompleted</string>
    <string name="action_share">Share</string>
    <string name="action_sharing">Share on social networks</string>
    <string name="action_show_less">Show less</string>
    <string name="action_show_more">Show more</string>
    
    <!-- Message -->
    <string name="message_login_failed">Login Failed!\nPlease login again!</string>
    <string name="message_share_facebook">Share from Real Life Real Game: %s</string>
    <string name="message_share_twitter">Share from Real Life Real Game: %s</string>
    <string name="message_share_finish">I\'ve finish task: %s</string>
    <string name="message_share_reach_level">I\'ve reached this point: %s</string>
</resources>